--- a/Place/Project/PointToPlace/PointToPlace/PointToPlace.csproj
+++ b/Place/Project/PointToPlace/PointToPlace/PointToPlace.csproj
@@ -59,6 +59,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseInterface.cs" />
+    <Compile Include="DbscanCluster.cs" />
+    <Compile Include="DbscanPoint.cs" />
     <Compile Include="GeoPoint.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -68,6 +70,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScenicPlace.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
